--- a/Pentagon Invaders/Pentagon Invaders.vcxproj
+++ b/Pentagon Invaders/Pentagon Invaders.vcxproj
@@ -86,6 +86,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CApp.h" />
+    <ClInclude Include="DrawingUtils.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="ShipStatistics.h" />
     <ClInclude Include="SpaceShip.h" />
