Implemented colors and color manager.

--- a/Pentagon Invaders/Pentagon Invaders.vcxproj
+++ b/Pentagon Invaders/Pentagon Invaders.vcxproj
@@ -87,6 +87,8 @@
   <ItemGroup>
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="CApp.h" />
+    <ClInclude Include="Color.h" />
+    <ClInclude Include="ColorManager.h" />
     <ClInclude Include="Delta.h" />
     <ClInclude Include="DrawingUtils.h" />
     <ClInclude Include="KeyboardHandler.h" />
@@ -105,6 +107,7 @@
     <ClCompile Include="CApp_OnInit.cpp" />
     <ClCompile Include="CApp_OnLoop.cpp" />
     <ClCompile Include="CApp_OnRender.cpp" />
+    <ClCompile Include="ColorManager.cpp" />
     <ClCompile Include="Delta.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Scene.cpp" />
