--- a/Pentagon Invaders/Pentagon Invaders.vcxproj.filters
+++ b/Pentagon Invaders/Pentagon Invaders.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="ColorManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="WindowSettings.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
