--- a/Pentagon Invaders/Pentagon Invaders.vcxproj
+++ b/Pentagon Invaders/Pentagon Invaders.vcxproj
@@ -111,6 +111,7 @@
     <ClCompile Include="ColorManager.cpp" />
     <ClCompile Include="Delta.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MovementHandler.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="ShipStatistics.cpp" />
     <ClCompile Include="SpaceShip.cpp" />
