--- a/Pentagon Invaders/Pentagon Invaders.vcxproj.filters
+++ b/Pentagon Invaders/Pentagon Invaders.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="WindowSettings.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="WaveMaker.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -105,6 +108,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MovementHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WaveMaker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
