--- a/Pentagon Invaders/Pentagon Invaders.vcxproj.filters
+++ b/Pentagon Invaders/Pentagon Invaders.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="WaveMaker.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BulletMaker.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -111,6 +114,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="WaveMaker.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BulletMaker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
